# ditto-screener

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: bake-image.yml  ci.yml  conventional-pr.yml  core-e2e.yml  deploy.yml  release.yml
deploy/: daemon.json  ditto-screener.service  l2-analyzer-requirements.txt  l2-analyzer.Dockerfile
ditto_screener/: __init__.py  __main__.py  binary_analysis.py  config.py  fake_gateway.py  gate.py  health.py  heartbeat.py  l2_review.py  model_canary.py  platform.py  policy.py  readiness.py  review_settings.py  signing.py  source_review.py  source_signals.py  worker.py
ditto_screener/data/: starter-kit-provenance-v1.json  starter-kit-provenance-v3.json  starter-kit-provenance-v4.json
docs/: binary-analysis.md  deployment.md  l2-source-review.md  policy-modules.md  policy-v7-false-positive-regression.md  source-review-policy.md
packer/: screener-fleet.pkr.hcl
scripts/: bootstrap-screener.sh  deploy-screener-via-ssh.sh  generate_starter_provenance.py  run_l2_calibration.py  update-screener.sh  verify-installed-signing-contract.py
tests/: conftest.py  test_config.py  test_deployment.py  test_fake_gateway.py  test_gate.py  test_gate_docker_integration.py  test_heartbeat.py  test_l2_live.py  test_l2_review.py  test_logging.py  test_model_canary.py  test_platform.py  test_policy.py  test_protocol_models.py  test_review_settings.py  test_signing.py  test_source_review.py  test_worker.py
tests/fixtures/: l2-review-regressions.json  production-v6-snapshot.json  source-review-regressions.json
tools/: l2_analyzer.py
