[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ditto-screener"
version = "0.3.0"
description = "Private platform-operated screening worker for Ditto SN118."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{ name = "heyDitto" }]
dependencies = [
    "bittensor>=10.2.1",
    "bittensor-wallet>=4.1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "psutil>=6",
    "ditto-screening-protocol==0.7.0",
]

[project.scripts]
ditto-screener = "ditto_screener.__main__:main"

[tool.uv.sources]
ditto-screening-protocol = { path = "packages/ditto-screening-protocol" }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["ditto_screener"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["ditto_screener", "ditto_screening_protocol"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests requiring a real Docker daemon"]
addopts = ["-m", "not integration"]

[tool.semantic_release]
allow_zero_version = true
build_command = "python -m ensurepip && python -m pip install --disable-pip-version-check uv==0.11.28 && uv lock && uv build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["ditto_screener/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
